--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23,9 +23,18 @@ html {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100vh; */
+}
+
+#root{
+
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  
 }
 
 .main {
